tests/fixtures/errors/invalid_preproc_expr_unsupported_logical.puml
@startuml
!if 1 && 1
Alice -> Bob: unsupported logical op
!endif
@enduml
